--- a/src/assets/scss/layout/_footer.scss
+++ b/src/assets/scss/layout/_footer.scss
@@ -64,6 +64,11 @@ footer{
             a{
                 color: $bgColorWhite;
                 text-decoration: none;
+                
+            }
+
+            .pcInnerText{
+                line-height: normal;
             }
         }
 
