--- a/src/assets/scss/layout/QRcodeLightBox.scss
+++ b/src/assets/scss/layout/QRcodeLightBox.scss
@@ -8,6 +8,10 @@
   align-items: center;
   width: 30%;
   height: 80%;
+  @media (width <= 768px) {
+    width: 80%;
+    height: 60%;
+  }
   .qrGc {
     position: absolute;
     top: 10px;
@@ -23,6 +27,9 @@
   h3 {
     color: $mainTextColor;
     margin-bottom: 10px;
+    @media (width <= 768px) {
+      // margin-bottom: 2px;
+    }
     span {
       color: $secColorblue;
     }
@@ -30,9 +37,19 @@
   .useNote {
     color: $mainTextColor;
     width: 80%;
+    @media (width <= 768px) {
+      margin-bottom: 20px;
+    }
     p {
       margin: 10px 0;
       letter-spacing: 2px;
+      font-size: $pcFontH4;
+      font-family: $font;
+      font-weight: 500;
+      line-height: 150%;
+      @media (width <= 768px) {
+        margin: 5px 0;
+      }
     }
   }
 }
