--- a/src/assets/scss/page/member.scss
+++ b/src/assets/scss/page/member.scss
@@ -3,9 +3,9 @@
   display: flex;
   justify-content: center;
   width: 100%;
-  height: 40vw;
+  height: 48vw;
   @media (width <= 768px) {
-    height: 65vw;
+    height: 190vw;
   }
 }
 
@@ -26,6 +26,9 @@
   backdrop-filter: blur(5px);
   background-color: rgba(0, 0, 0, 0.3);
   z-index: 1000;
+  @media (width <= 768px) {
+    align-items: flex-start;
+  }
 }
 .memPage {
   position: relative;
@@ -76,15 +79,25 @@
           gap: 5px;
           margin-top: 20px;
           width: 100px;
-          height: 30px;
+          height: 45px;
         }
         &:hover {
-          color: $primaryColorYellow;
+          color: $primaryColorGreen;
+        }
+        .sidebarText {
+          font-size: $pcFontH4;
+          font-family: $font;
+          font-weight: 500;
+          line-height: 150%;
+          @media (width <= 768px) {
+            font-size: 16px;
+          }
         }
         img {
-          width: 1.47vw;
-          height: 2.5vh;
+          width: 20px;
+          height: 20px;
           @media (width <= 768px) {
+            display: none;
           }
         }
       }
@@ -101,7 +114,7 @@
       width: 60%;
       height: 100%;
       @media (width <= 768px) {
-        row-gap: 20px;
+        width: 100%;
       }
       h2 {
         @include defaultMemH2();
@@ -142,13 +155,24 @@
           @media (width <= 768px) {
             height: 60%;
           }
+          .infoInput {
+            background-color: $inputColor;
+            color: $mainTextColor;
+            margin-left: 5px;
+            height: 35px;
+            width: 250px;
+            @media (width <= 768px) {
+              width: 180px;
+              height: 30px;
+            }
+          }
           .infoBtn {
             position: absolute;
             right: 0;
             bottom: -40px;
             @media (width <= 768px) {
-              bottom: -8vw;
-              right: 80px;
+              bottom: -50px;
+              right: 0px;
             }
           }
         }
@@ -157,7 +181,7 @@
     .camel {
       position: absolute;
       bottom: 0;
-      right: 50vw;
+      left: 20vw;
       height: 120px;
       width: 250px;
       @media (width <= 768px) {
@@ -178,46 +202,53 @@
       flex-direction: column;
       width: 60%;
       @media (width <= 768px) {
-        width: 80%;
+        width: 100%;
       }
       h2 {
         @include defaultMemH2();
       }
-      .listTitle {
-        position: relative;
+      .buyHistory {
         display: flex;
-        width: 100%;
+        border-bottom: 2px solid black;
+        width: 50%;
         justify-content: space-around;
         align-items: center;
-        margin: 2vw 0 4.5vw 0;
-        color: $mainTextColor;
-        ::after {
-          content: "";
-          height: 2px;
-          width: 100%;
-          position: absolute;
-          right: 0;
-          top: 3.5vw;
-          background-color: $mainTextColor;
+        height: 240px;
+        @media (width <= 768px) {
+          width: 95%;
         }
-      }
-      .listInfo {
-        display: flex;
-        width: 100%;
-        justify-content: space-around;
-        align-items: center;
-        margin-bottom: 3vw;
-        color: $mainTextColor;
-        .idColor {
-          color: $secColorblue;
-          cursor: pointer;
+        .listTitle {
+          width: 50%;
+          height: 95%;
+          display: flex;
+          flex-direction: column;
+          align-items: flex-end;
+          justify-content: space-evenly;
+          @media (width <= 768px) {
+          }
+        }
+        .listInfo {
+          width: 50%;
+          height: 100%;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: space-evenly;
+          @media (width <= 768px) {
+            align-items: flex-start;
+            margin-left: 20px;
+          }
+          .idColor {
+            cursor: pointer;
+            color: $secColorblue;
+          }
         }
       }
     }
     .ticketCrocodile {
       position: absolute;
       bottom: 0px;
-      right: 30vw;
+      right: 15vw;
       height: 50px;
       width: 200px;
     }
@@ -241,6 +272,11 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        @media (width <= 768px) {
+          flex-direction: column;
+
+          width: 90%;
+        }
         .coupon {
           width: 22vw;
           flex-direction: column;
@@ -248,8 +284,18 @@
           justify-content: space-evenly;
           align-items: center;
           height: 220px;
+          @media (width <= 768px) {
+            height: 150px;
+            flex-direction: row;
+            width: 100%;
+          }
           img {
             width: 100%;
+            height: 100%;
+            @media (width <= 768px) {
+              width: 70%;
+              margin-right: 10px;
+            }
           }
           .couponBtn {
             position: relative;
@@ -261,6 +307,10 @@
             cursor: pointer;
             background-color: $bgColorWhite;
             color: $mainTextColor;
+            @media (width <= 768px) {
+              width: 100px;
+              height: 30px;
+            }
             &:hover {
               background-color: $primaryColorYellow;
             }
@@ -270,6 +320,10 @@
               height: 8px;
               bottom: 0.3vw;
               right: 0.3vw;
+              @media (width <= 768px) {
+                bottom: 2px;
+                right: -6px;
+              }
             }
           }
         }
@@ -281,6 +335,10 @@
       right: 20vw;
       height: 110px;
       width: 300px;
+      @media (width <= 768px) {
+        height: 90px;
+        width: 250px;
+      }
     }
   }
 
@@ -293,6 +351,8 @@
       flex-direction: column;
       align-items: center;
       width: 100%;
+      @media (width <= 768px) {
+      }
       h2 {
         @include defaultMemH2();
       }
@@ -302,6 +362,9 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        @media (width <= 768px) {
+          width: 90%;
+        }
         .comment {
           position: relative;
           display: flex;
@@ -310,6 +373,9 @@
           gap: 2vw;
           width: 100%;
           height: 18vw;
+          @media (width <= 768px) {
+            height: 45vw;
+          }
           .commentBg {
             position: absolute;
             width: 100%;
@@ -318,6 +384,9 @@
           .commentPic {
             z-index: 1;
             height: 70%;
+            @media (width <= 768px) {
+              height: 60%;
+            }
           }
           .commentArea {
             display: flex;
@@ -326,12 +395,22 @@
             justify-content: center;
             row-gap: 3.5vw;
             z-index: 3;
+            @media (width <= 768px) {
+            }
             .commentTitle {
               color: $mainTextColor;
             }
             .commentText {
               line-height: 2vw;
               color: $mainTextColor;
+              font-size: $pcFontH4;
+              font-family: $font;
+              font-weight: 500;
+              line-height: 150%;
+              @media (width <= 768px) {
+                line-height: 5vw;
+                font-size: 12px;
+              }
             }
           }
           .greenClose {
@@ -346,6 +425,9 @@
             position: absolute;
             bottom: -4vw;
             right: 2vw;
+            @media (width <= 768px) {
+              bottom: -10vw;
+            }
           }
         }
       }
