--- a/src/assets/scss/page/animal.scss
+++ b/src/assets/scss/page/animal.scss
@@ -7,7 +7,8 @@
 }
 
 .animal_pc_sidebar{
-    position: relative;
+    position: sticky;
+    z-index: 1;
     .filter_btn_item img{
         width: 2vw;
     }
@@ -36,13 +37,55 @@
             top: -2.5vw;
             right: 0vw;
         }
+        .monkey{
+            position: absolute;
+            top: -4vw;
+            right: 0vw;
+        }
     }
     @media (max-width: 768px) {
         display: none;
     }
 }
 
+//下拉式選單
+#animaldetail_sidebar{
+    .animaldetail_filter{
+        flex-wrap: wrap;
+        align-items: center;
+        height: auto;
+        row-gap: 0;
+        .main_select{
+            height: 6.2vh;
+            display: flex;
+            align-items: center;
+            column-gap: 19px;
+            img{
+                width: 1.2vw;
+            }
+        }
+
+        .animaldetail_sub_menu{
+            width: 100%;
+
+            li{
+                height: 3vw; 
+                border-top: $bgColorWhite solid 0.2vw;
+                a{
+                    display: block;
+                    height: 100%;
+                    text-align: center;
+                    padding: 0.7vw 0;
+                    background-color:$inputTextColor;
+                    color: $mainTextColor;
+                }
+            }        
+        }
+    }
+}
+
 .animal_section, .animal_detail_section{
+    position: relative;
     max-width: 1920px;
 }
 
@@ -107,7 +150,7 @@
     align-items: center;
     padding-bottom: 2.6vw;
     img{
-        width: 12vw;
+        width: 17vw;
     }
     .animal_name{
         color:$mainTextColor;
@@ -118,8 +161,8 @@
 [class*=col-] {
     box-sizing: border-box;
 }
-.col-md-3 {
-    width: 25%;
+.col-md-4 {
+    width: 33.333333%;
 }
 
 @media screen and (max-width: 768px) {
@@ -147,7 +190,6 @@
     padding-top: 4.2vw;
     p{
         color:$mainTextColor;
-        line-height: 150%;
     }
     @media screen and (max-width: 768px) {
         max-width: 90%;
@@ -163,7 +205,7 @@
         display: flex;
         flex-direction: column;
         width: 24vw;
-        gap: 3vw;
+        gap: 2vw;
         h5{
             padding-bottom: 1.2vw;
             color: $primaryColorGreen;
@@ -259,7 +301,7 @@
             width: 15.6vw;  
         }
     }
-    .animal_detail_bg{
+    .animal_detail_text_bg{
         display: flex;
         align-items: center;
         justify-content: center;
@@ -301,13 +343,58 @@
             p{     
                 padding-top: 2.6vw;
                 color: $bgColorLightgray;   
-                line-height: 150%;  
             }    
         }   
         
     } 
     
 } 
+
+//背景
+.animal_detail_bg{
+    background-color: $bgColorLightgray;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    top: 0;
+    .cloud_bg{
+        position: absolute;
+    }
+    .cloud_4{
+        top: 8%; 
+        left: 0%;
+        width: 25%;      
+    }
+    .cloud_6{   
+        top: 15%;      
+        right: -3%;  
+        width: 20%;   
+    }
+    .cloud_7{
+        top: 15%; 
+        left: 46%;
+        width: 10%;
+    }
+    .animal_bg_animal{
+        position: absolute;
+        bottom: 0;
+    }
+    .ostrich{
+        width: 6%; 
+        left: 7%;
+
+        -moz-transform:scaleX(-1);
+        -webkit-transform:scaleX(-1);
+        -o-transform:scaleX(-1);
+        transform:scaleX(-1);
+    }
+    .chimpanzees{
+        width: 8%; 
+        right: 0;
+    }
+}
+
 
 
 
